# xputils

./: .gitignore  COPYING  Cargo.toml  LICENSE.md  README.md  build.rs  clippy.toml  deny.toml  rustfmt.toml
.builds/: render-readme.yml
.reuse/: dep5
LICENSES/: Parity-7.0.0.md
examples/: fix.rs  navaids.rs
licenses/: Parity-7.0.0.md
src/: dsf.rs  lib.rs  navdata.rs
src/navdata/: airways.rs  cifp.rs  fix.rs  hold.rs  mod.rs  nav.rs
xp_nav/: README
