[package]
name = "xputils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { optional = true }
rust_decimal = { version = "1.33", optional = true }
sevenz-rust = { optional = true, version = "0.5" }
snafu = "0.7"
winnow = { version = "0.5", optional = true }

[features]
dsf = ["dep:byteorder", "dep:sevenz-rust"]
navdata = ["dep:rust_decimal", "dep:winnow"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = "warn"
float_cmp_const = "deny"
self_named_module_files = "deny"
semicolon_inside_block = "deny"
todo = "warn"
try_err = "deny"
lossy_float_literal = "deny"
multiple_crate_versions = "allow"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
