# SPDX-FileCopyrightText: 2024 Julia DeMille <me@jdemille.com>
#
# SPDX-License-Identifier: Parity-7.0.0

[package]
name = "xputils"
version = "0.1.0-alpha.1"
description = "Utilities for X-Plane plugins written in Rust. It's like libacfutils, but Rust, and with 100% less HotStart."
license = "Parity-7.0.0"
readme = "README.md"
edition = "2021"
rust-version = "1.75"
repository = "https://github.com/judemille/xputils"
keywords = ["xplane", "x-plane", "flight sim", "acfutils"]
categories = [
    "aerospace::simulation",
    "data-structures",
    "game-development",
    "parser-implementations",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "~1.5", optional = true }
chumsky = { version = "~1.0.0-alpha.6", optional = true, features = ["label", "either"] }
const_format = { version = "~0.2", optional = true }
either = "~1.9"
heapless = "~0.8"
itertools = "~0.12"
num = "~0.4"
num_enum = "~0.7"
petgraph = { version = "~0.6", optional = true, default-features = false }
rust_decimal = "~1.33"
rust_decimal_macros = "~1.33"
sevenz-rust = { optional = true, version = "~0.5" }
snafu = "~0.8"
winnow = { version = "~0.5", optional = true, features = ["simd"] }

[build-dependencies]
rustc_version = "0.4"

[features]
dsf = ["dep:byteorder", "dep:sevenz-rust"]
navdata = ["dep:chumsky", "dep:const_format", "dep:petgraph", "dep:winnow"]
parser_debug = ["winnow/debug"]

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = "warn"
float_cmp_const = "deny"
mod_module_files = "deny"
semicolon_inside_block = "deny"
todo = "warn"
try_err = "deny"
lossy_float_literal = "deny"
cargo = "warn"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc",
]

[[example]]
name = "fix"
required-features = ["backtraces", "navdata"]

[[example]]
name = "navaids"
required-features = ["backtraces", "navdata"]
